solvetstcrud